--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,16 @@
 language: python
-python: 3.4
+python: 3.5
 env:
   matrix:
    - TOXENV=py27
    - TOXENV=py33
    - TOXENV=py34
+   - TOXENV=py35
    - TOXENV=pypy
    - TOXENV=flake8
 install:
   - pip install tox
-  - if test "$TOXENV" = py34 ; then pip install coveralls ; fi
+  - if test "$TOXENV" = py35 ; then pip install coveralls ; fi
 script: tox
 after_script:
-  - if test "$TOXENV" = py34 ; then coveralls ; fi
+  - if test "$TOXENV" = py35 ; then coveralls ; fi
